# rust_yolov8

./: Cargo.toml  README.md  yolov8.bak
examples/: yolov8.rs
