[package]
publish = false
name = "example-yolov8"
version = "0.0.0"
edition = "2021"

[dependencies]
ort ="2.0.0-rc.6"
ndarray = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.25"
#show-image = { version = "0.14", features = [ "image", "raqote" ] }
#raqote = { version = "0.8", default-features = false }
#ureq = "2.1"
tracing = "0.1"

[features]
load-dynamic = [ "ort/load-dynamic" ]
rocm = [ "ort/rocm" ]

[[bin]]
name = "yolov8"
path = "examples/yolov8.rs"